ajuste UX para UX/UI

--- a/my/paginas/livros/index.html
+++ b/my/paginas/livros/index.html
@@ -153,7 +153,7 @@
       <li><a href="../frontend/index.html"><div class="circle"></div>Front End</a></li>
       <li><a href="../marketing/index.html"><div class="circle"></div>Marketing</a></li>
       <li><a href="../seo/index.html"><div class="circle"></div>SEO</a></li>
-      <li><a href="../ux/index.html"><div class="circle"></div>UX</a></li>
+      <li><a href="../ux/index.html"><div class="circle"></div>UX/UI</a></li>
       <li><a href="../3d/index.html"><div class="circle"></div>3D</a></li>             
       <li><a href="../livros/index.html" class="selected"><div class="circle"></div>Livros</a></li>
       <li><a href="../ebooks/index.html"><div class="circle"></div>Ebooks</a></li>
