--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -173,7 +173,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.awwwards.com/websites/" target="_blank">
-            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/85bacf2d10be0985c046a42950564961/5C332CA5/t51.2885-19/s150x150/31714420_832450760278142_4302607574668148736_n.jpg" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/32235667_1643352692367816_4761789988641701888_n.png?_nc_cat=109&_nc_oc=AQmcjl3JBlXAWVh0Ayy4GbpxccDWOpkiv0-dRdh6Z-G8mVQZxpxvQYjYzY0YU83ZSjM&_nc_ht=scontent.fcwb2-2.fna&oh=3f333a8ac1d16c1e9644332f7a53e973&oe=5DB90C17" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -188,7 +188,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://zeplin.io/" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/11796311_417326238477451_4522575293430406773_n.png?_nc_cat=0&oh=24a899ea27fc55e0a6a4e232a9114f90&oe=5BF8302F" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/11796311_417326238477451_4522575293430406773_n.png?_nc_cat=104&_nc_oc=AQlP5mF_Uao9_aAX4iDf7R9s2Xvq2HAUS8en6te0k0jZWdjyKYuHbsWmKf1aOP4Qf2E&_nc_ht=scontent.fcwb2-1.fna&oh=d61cc34d50e8704d755a0bdd712a3c48&oe=5D83B22F" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -248,7 +248,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://framer.com/" target="_blank">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/35282540_985848591571651_1114989551744450560_n.jpg?_nc_cat=0&oh=22cf1ec14c09011bbafa19e098e1cb7f&oe=5C1772F3" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/35282540_985848591571651_1114989551744450560_n.jpg?_nc_cat=110&_nc_oc=AQk96KozHIRN-tWDIIn3grBIThvmfnC172fOduK15QMIuHObM09q_3qDwuMbdj59oiU&_nc_ht=scontent.fcwb2-2.fna&oh=bef48a3da7f760e1f76e4b419b1f62d6&oe=5D8169C7" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -263,7 +263,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://maze.design/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/31165840_355665734925368_3369729425162633216_n.png?_nc_cat=0&oh=52ffb39af049df878e0e1885e37bc8a5&oe=5C1DFB9E" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/31165840_355665734925368_3369729425162633216_n.png?_nc_cat=105&_nc_oc=AQmJ4z5-6FPatSAcVXaqiMV8X8g835HimayVevw_TcW-yQlSIdY1iftWf3nKmk0xDdQ&_nc_ht=scontent.fcwb2-1.fna&oh=7884c6a8ee0951f01118c1e2a0f6d8d8&oe=5D870CAA" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -297,7 +297,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.protopie.io/" target="_blank">
-            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/267fc1197247372875d871b9d1f7e976/5C388067/t51.2885-19/s150x150/12750253_993533700720458_1942091324_a.jpg" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/12366229_989027741143130_3327574197278623177_n.png?_nc_cat=104&_nc_oc=AQmZI3ZqDXyZ1nGhhmOOlgS-cr2ubTo_YCsEyvTLo_QUaAVGA8X1szIZDAC3_vLTg0s&_nc_ht=scontent.fcwb2-1.fna&oh=8eb35c3c8f050345fb096e455f687013&oe=5D88A28B" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -312,17 +312,17 @@ and share your amazing creations in a matter of minutes.</p>
 
       <li>
         <div class="resource-icon">
-          <a href="https://popapp.in/" target="_blank">
+          <a href="https://marvelapp.com/pop/" target="_blank">
             <img src="../../base/images/popapp.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
           <h2>
-            <a href="https://popapp.in/" target="_blank">Pop app</a>
+            <a href="https://marvelapp.com/pop/" target="_blank">Pop app</a>
           </h2>
-          <p>Prototyping on Paper<br>Focado em protótipo de baixa fidelidade</p>
+          <p>Prototyping on Paper<br>Focado em protótipo de baixa fidelidade (Comprado pela Marvel app)</p>
         </div>
-        <a class="resource-button" href="https://popapp.in/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://marvelapp.com/pop/" target="_blank">Veja</a>
       </li> 
 
       <div class="linha"></div>
@@ -331,17 +331,17 @@ and share your amazing creations in a matter of minutes.</p>
 
       <li>
         <div class="resource-icon">
-          <a href="https://popapp.in/" target="_blank">
-            <img src="../../base/images/popapp.jpg" alt="#" />
+          <a href="https://www.mockflow.com/" target="_blank">
+            <img src="../../base/images/mockFlow.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
           <h2>
-            <a href="https://popapp.in/" target="_blank">MockFlow</a>
+            <a href="https://www.mockflow.com/" target="_blank">MockFlow</a>
           </h2>
           <p>The quickest way to brainstorm user interface ideas  </p>
         </div>
-        <a class="resource-button" href="https://popapp.in/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://www.mockflow.com/" target="_blank">Veja</a>
       </li> 
 
       <div class="linha"></div>
@@ -396,7 +396,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://www.homemmaquina.com.br/nosso-blog/" target="_blank">
-            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/83729e73cc2a18fe5735ce976c086d81/5C336588/t51.2885-19/s320x320/20184331_1338043859576342_2561288263612497920_a.jpg" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/19732335_1728054027227684_7049148692975079195_n.png?_nc_cat=104&_nc_oc=AQm2BghLiVTGHjFzcY_4W2Ho6tkIV7nPmdeBhdNshzzjp-lwn0war8jnbbXxzGi9D2g&_nc_ht=scontent.fcwb2-1.fna&oh=047ae78638b9efb06899ec0827bbc76f&oe=5DB8D84E" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -411,7 +411,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="http://mwpt.com.br/novidades/" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/21751273_1587811881286037_3244959824989961902_n.png?_nc_cat=106&oh=97ac554bc19391a7396f56d3b2435660&oe=5C58E90E" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/21751273_1587811881286037_3244959824989961902_n.png?_nc_cat=106&_nc_oc=AQlFe2n-IPmoAQAg6rjgbwiBjZ4eS4DZlsSCqk8nynQ-9_9UqTWBaW0SvpXPH1zfje8&_nc_ht=scontent.fcwb2-1.fna&oh=6a58dddec73922e5586221a196fa7741&oe=5DC61349" alt="#" />
           </a>
         </div>
         <div class="resource-details">
