--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -965,6 +965,22 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://uxplanet.org/how-to-land-a-career-in-ux-design-with-zero-qualifications-16ddcb3b3eda?fbclid=IwAR0I1NTTV2vQ7keeWvg8NS189-gdBwK6Aiyop7TXZXK1rIDW3KRC0RkrGn0" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="http://www.wireframeshowcase.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.wireframeshowcase.com/" target="_blank">Wireframe Showcase
+            </a>
+          </h2>
+          <p>Processo de evolução do Wireframes</p>
+        </div>
+        <a class="resource-button" href="http://www.wireframeshowcase.com/" target="_blank">Veja</a>
+      </li>
+
     </ul>
       <ul class="sidebar-navigation">
               <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
