React Awesome Slider

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -908,7 +908,7 @@
           <h2>
             <a href="https://reactjs.org/" target="_blank">React</a>
           </h2>
-          <p>A JavaScript library for building user interfaces</p>
+          <p>A JavaScript library for building user interfaces | <a href="https://caferati.me/demo/react-awesome-slider" target="_blank">React Awesome Slider</a></p>
         </div>
         <a class="resource-button" href="https://reactjs.org/" target="_blank">Veja</a>        
       </li>
