atualização link logo caelum and Nucleoapp

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -411,7 +411,7 @@
       <li>
         <a href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10155941_10152196905759086_2402332230842303175_n.png?_nc_cat=107&_nc_ht=scontent.fcwb2-2.fna&oh=13feaae259b9e3676aa9f70595bbb775&oe=5D0FA564" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/10155941_10152196905759086_2402332230842303175_n.png?_nc_cat=107&_nc_oc=AQkql5VF8QM8b71hPugnHwqGmicBBz5SaMCbePwmWqepGs6NgcqUDBt4BlHEpebS7no&_nc_ht=scontent.fcwb2-2.fna&oh=32c36ef0f5dec8419f00d4c7581de0da&oe=5D7BB7BF" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -1042,7 +1042,7 @@
       <li>
         <a href="https://nucleoapp.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/17759967_1242890822497106_1662123643343366018_n.png?_nc_cat=100&_nc_ht=scontent.fcwb2-2.fna&oh=bf87a6c2b3f4b75a64fb4b7928c63e52&oe=5D134710" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/17759967_1242890822497106_1662123643343366018_n.png?_nc_cat=100&_nc_oc=AQmbPi50ELD6rEmjSVlLG7Z7j17tXymBMeWmRfpSd25LrLNXvZ7In24VVIUvGQYGzD4&_nc_ht=scontent.fcwb2-2.fna&oh=17ba46004c73aef53462a93bedd5b96f&oe=5DC0ECB6" alt="#" />
           </div>
         </a>
         <div class="resource-details">
