Animate On Scroll Library

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -668,6 +668,21 @@
           <p>Framework para demonstração de códigos</p>
         </div>
         <a class="resource-button" href="https://prismjs.com" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <a href="https://michalsnik.github.io/aos/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://michalsnik.github.io/aos/" target="_blank">AOS</a>
+          </h2>
+          <p>Animate Scroll</p>
+        </div>
+        <a class="resource-button" href="https://michalsnik.github.io/aos/" target="_blank">Veja</a>
         <div id="animacoes"></div>
       </li>
 
