CSS Grid Generator

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1121,6 +1121,21 @@
       </li>
 
       <li>
+        <a href="https://cssgrid-generator.netlify.com/" target="_blank">
+          <div class="resource-icon"> 
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://cssgrid-generator.netlify.com/" target="_blank">CSS Grid Generator</a>
+          </h2>
+          <p>Cria Grids</p>
+        </div>
+        <a class="resource-button" href="https://cssgrid-generator.netlify.com/" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/css-tricks.jpg" alt="#" />
