Banco de Dados free, Curso BitDegree e Digital Innovation One

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2200,7 +2200,42 @@
           <p>Blogs</p>
         </div>
         <a class="resource-button" href="https://cssauthor.com/" target="_blank">Veja</a>
-        <div id="tutoriais"></div>   
+        <div id="cursos"></div>   
+      </li>
+
+      <div class="linha"></div>
+      <h2 class="margen-titulo color-frontend">Cursos</h2>
+      <div class="linha"></div>
+
+      <li>
+        <a href="https://www.bitdegree.org/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.bitdegree.org/" target="_blank">BitDegree</a>
+          </h2>
+          <p>We take learning to new heights</p>
+        </div>
+        <a class="resource-button" href="https://www.bitdegree.org/" target="_blank">Veja</a>   
+      </li>
+
+      <li>
+        <a href="https://digitalinnovation.one/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://digitalinnovation.one/" target="_blank">Digital Innovation One</a>
+          </h2>
+          <p>SEJA UM PROFISSIONAL DIGITAL DO FUTURO</p>
+        </div>
+        <a class="resource-button" href="https://digitalinnovation.one/" target="_blank">Veja</a> 
+        <div id="tutorials"></div>   
       </li>
 
       <div class="linha"></div>
@@ -3011,10 +3046,12 @@
       <li><a class="scroll" href="#bibliotecas-js">Bibliotecas JS</a></li>      
       <li><a class="scroll" href="#animacoes">Animações</a></li>
       <li><a class="scroll" href="#zoom">Zoom | Popup</a></li> 
-      <li><a class="scroll" href="#icones">Ícones</a></li> 
+      <li><a class="scroll" href="#icones">Ícones</a></li>      
+      <li><a class="scroll" href="#bancos">Banco de Dados</a></li>      
       <li><a class="scroll" href="#documentacao">Documentações</a></li>
       <li><a class="scroll" href="#utilitarios">Utilitários</a></li>
       <li><a class="scroll" href="#blogs">Blogs</a></li>
+      <li><a class="scroll" href="#cursos">Cursos</a></li>
       <li><a class="scroll" href="#tutoriais">Tutoriais</a></li>
       <li><a class="scroll" href="#estudo">Estudo</a></li>
       <li><a class="scroll" href="#certificacao">Certificação</a></li>
