--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -326,7 +326,7 @@ and share your amazing creations in a matter of minutes.</p>
       </li> 
 
       <div class="linha"></div>
-      <h2 class="margen-titulo color-design">Sitemaps</h2>
+      <h2 class="margen-titulo color-design">Sitemaps/Mindmaps</h2>
       <div class="linha"></div>
 
       <li>
@@ -342,6 +342,21 @@ and share your amazing creations in a matter of minutes.</p>
           <p>The quickest way to brainstorm user interface ideas  </p>
         </div>
         <a class="resource-button" href="https://www.mockflow.com/" target="_blank">Veja</a>
+      </li> 
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.mindmaps.app/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.mindmaps.app/" target="_blank">Mindmaps</a>
+          </h2>
+          <p>Mapas Mentais | Possui suporte para Dropbox, GoogleDrive e salva local</p>
+        </div>
+        <a class="resource-button" href="https://www.mindmaps.app/" target="_blank">Veja</a>
       </li> 
 
       <div class="linha"></div>
