7 Best Video Compression Tools

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -917,6 +917,21 @@ Ilustração Digital</a>
         </div>
         <a class="resource-button" href="http://creativedo.co/FontAwesomePS" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.hongkiat.com/blog/online-offline-tools-to-compress-videos/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.hongkiat.com/blog/online-offline-tools-to-compress-videos/" target="_blank">7 Best Video Compression Tools for 2019</a>
+          </h2>
+          <p>Unicoverter, Video Compressor, YouCompress, Clipchamp Utilities, Movavi Video Converter, Handbrake, Compressor By Apple, Free HD Video Converter</p>
+        </div>
+        <a class="resource-button" href="https://www.hongkiat.com/blog/online-offline-tools-to-compress-videos/" target="_blank">Veja</a>
+      </li>
       
       </ul>
         <ul class="sidebar-navigation">
