--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2235,7 +2235,7 @@
           <p>SEJA UM PROFISSIONAL DIGITAL DO FUTURO</p>
         </div>
         <a class="resource-button" href="https://digitalinnovation.one/" target="_blank">Veja</a> 
-        <div id="tutorials"></div>   
+        <div id="tutoriais"></div>   
       </li>
 
       <div class="linha"></div>
