--- a/my/paginas/ebooks/index.html
+++ b/my/paginas/ebooks/index.html
@@ -216,6 +216,21 @@
         </div>
         <a class="resource-button" href="https://rockcontent.com/guias-definitivos/?utm_content=57200291&utm_medium=social&utm_source=twitter" target="_blank">Veja</a>
       </li>
+       
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.packtpub.com/free-learning" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="ebook psicologia das cores" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.packtpub.com/free-learning" target="_blank">Packt</a>
+          </h2>
+          <p>Livros de programação e I.A de graça</p>
+        </div>
+        <a class="resource-button" href="https://www.packtpub.com/free-learning" target="_blank">Veja</a>
+      </li>
 
     </ul>
 
