--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2421,6 +2421,22 @@
           <p>Developers Google</p>
         </div>
         <a class="resource-button" href="https://developers.google.com/web/tools/chrome-devtools/remote-debugging/?utm_source=dcc&utm_medium=redirect&utm_campaign=2016q3" target="_blank">Veja</a>   
+      </li>
+
+      <li>
+        <a href="https://www.hongkiat.com/blog/css-grid-layout-minmax/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.hongkiat.com/blog/css-grid-layout-minmax/" target="_blank">
+              How to Use minmax() CSS Grid</a>
+          </h2>
+          <p>Tutorials</p>
+        </div>
+        <a class="resource-button" href="https://www.hongkiat.com/blog/css-grid-layout-minmax/" target="_blank">Veja</a>   
         <div id="estudo"></div>  
       </li>
         
