XD Guru Tutorials

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -628,6 +628,21 @@ and share your amazing creations in a matter of minutes.</p>
 
       <li>
         <div class="resource-icon">
+          <a href="https://www.xdguru.com/adobe-xd-tutorials/" target="_blank">
+            <img src="../../base/images/xdguru.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.xdguru.com/adobe-xd-tutorials/" target="_blank">XD Guru Tutorials</a>
+          </h2>
+          <p>Adobe XD Tutorials</p>
+        </div>
+        <a class="resource-button" href="https://www.xdguru.com/adobe-xd-tutorials/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://www.xdguru.com/adobe-xd-guide/" target="_blank">
             <img src="../../base/images/xdguru.jpg" alt="#" />
           </a>
