--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -672,6 +672,19 @@
 					<p>Fabridamazio</p>
 				</div>
 				<a class="resource-button" href="https://fabridamazio.github.io/Calculadora-de-Constraste-de-Cores/#%233949AB-on-%2380CBC4" target="_blank">Veja</a>
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="http://paletton.com/#uid=1000u0kllllaFw0g0qFqFg0w0aF" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="#" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="http://paletton.com/#uid=1000u0kllllaFw0g0qFqFg0w0aF" target="_blank">Paletton</a> </h2>
+					<p>Design your stunning website</p>
+				</div>
+				<a class="resource-button" href="http://paletton.com/#uid=1000u0kllllaFw0g0qFqFg0w0aF" target="_blank">Veja</a>
 				<div id="icones"></div>
 			</li>
 
