Estudo sobre Tipografia Manuscrita

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -653,6 +653,23 @@ Ilustração Digital</a>
         <a class="resource-button" href="https://blog.prototypr.io/10-basic-principles-of-visual-design-55b86b9f7241" target="_blank">Veja</a>
         <div id="professores"></div>
       </li>
+    
+      <li>
+        <div class="resource-icon">
+          <a href="https://temporalcerebral.com.br/fontes-manuscritas-aumentam-vendas-produtos-hedonicos/?fbclid=IwAR0q7z28beFcJwOFIt3ljNaTCcfBRfedFKQMLl1O9tcCDhFPM7TkFba04hU" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://temporalcerebral.com.br/fontes-manuscritas-aumentam-vendas-produtos-hedonicos/?fbclid=IwAR0q7z28beFcJwOFIt3ljNaTCcfBRfedFKQMLl1O9tcCDhFPM7TkFba04hU" target="_blank"> 
+              Tipografia manuscrita aumenta vendas de produtos de satisfação pessoal</a>
+          </h2>
+          <p>Temporal Cerebral</p>
+        </div>
+        <a class="resource-button" href="https://temporalcerebral.com.br/fontes-manuscritas-aumentam-vendas-produtos-hedonicos/?fbclid=IwAR0q7z28beFcJwOFIt3ljNaTCcfBRfedFKQMLl1O9tcCDhFPM7TkFba04hU" target="_blank">Veja</a>
+        <div id="professores"></div>
+      </li>
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Professores</h2>
