--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1052,6 +1052,21 @@
         <a class="resource-button" href="https://iconscout.com/unicons?fbclid=IwAR3i1RBkOApSJsmHCImnn6grSQjshrqwSuwUUMrSs6s1fnC0v_feJMAR_-A" target="_blank">Veja</a>
         <div id="hospedagem"></div>
       </li>  
+      
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/Role_Img#SVG_and_roleimg" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/Role_Img#SVG_and_roleimg" target="_blank">SVG Role Image</a>
+          </h2>
+          <p>Multiple elements path, circle and others</p>
+        </div>
+        <a class="resource-button" href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/Role_Img#SVG_and_roleimg" target="_blank">Veja</a>
+      </li>  
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Hospedagem Free</h2>
