Kanban Project Management

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -275,6 +275,21 @@
         <a class="resource-button" href="https://maze.design/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <a href="https://kanboard.org/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />          
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://kanboard.org/" target="_blank">Kanban Project Management</a>
+          </h2>
+          <p>Kanboard is a free and open source Kanban project management software.</p>
+        </div>
+        <a class="resource-button" href="https://kanboard.org/" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Prototipagem</h2>
       <div class="linha"></div>
