A beautiful, responsive, customizable, accessible replacement for JavaScript popup boxes

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -884,14 +884,28 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://jonsuh.com/hamburgers/" target="_blank">Tasty CSS-animated hamburgers</a>
+            <a href="https://jonsuh.com/hamburgers/" target="_blank">Tasty CSS Animated hamburgers</a>
           </h2>
           <p>Animation</p>
         </div>
-        <a class="resource-button" href="https://jonsuh.com/hamburgers/" target="_blank">Veja</a>
-        <div id="zoom"></div>
+        <a class="resource-button" href="https://jonsuh.com/hamburgers/" target="_blank">Veja</a>        
       </li>  
 
+      <li>
+        <a href="https://sweetalert2.github.io/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://sweetalert2.github.io/" target="_blank">Sweet Alert 2</a>
+          </h2>
+          <p>Animation</p>
+        </div>
+        <a class="resource-button" href="https://sweetalert2.github.io/" target="_blank">Veja</a>
+        <div id="zoom"></div>
+      </li>  
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Zoom | Modal | Popup</h2>
