description Sweet Alert 2

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -901,7 +901,7 @@
           <h2>
             <a href="https://sweetalert2.github.io/" target="_blank">Sweet Alert 2</a>
           </h2>
-          <p>Animation</p>
+          <p>A beautiful, responsive, customizable, accessible (WAI-ARIA) replacement for JavaScript's popup boxes</p>
         </div>
         <a class="resource-button" href="https://sweetalert2.github.io/" target="_blank">Veja</a>
         <div id="zoom"></div>
