--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -811,6 +811,19 @@
 
 			<li>
 				<div class="resource-icon">
+					<a href="https://remixicon.com/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Icon Store" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://remixicon.com/" target="_blank">Remix Icon</a> </h2>
+					<p>Simply Delightful System</p>
+				</div>
+				<a class="resource-button" href="https://remixicon.com/" target="_blank">Veja</a>
+			</li>
+
+			<li>
+				<div class="resource-icon">
 					<a href="https://icons8.com/" target="_blank">
 						<img src="../../base/images/icons8.jpg" alt="Icon Store" />
 					</a>
