--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1064,7 +1064,6 @@
           <p>1000+ Pixel-perfect vector icons and Iconfont for your next project.</p>
         </div>
         <a class="resource-button" href="https://iconscout.com/unicons?fbclid=IwAR3i1RBkOApSJsmHCImnn6grSQjshrqwSuwUUMrSs6s1fnC0v_feJMAR_-A" target="_blank">Veja</a>
-        <div id="hospedagem"></div>
       </li>  
       
       <li>
@@ -1080,6 +1079,22 @@
           <p>Multiple elements path, circle and others</p>
         </div>
         <a class="resource-button" href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/Role_Img#SVG_and_roleimg" target="_blank">Veja</a>
+      </li>  
+      
+      <li>
+        <a href="https://remixicon.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://remixicon.com/" target="_blank">Remix Icon</a>
+          </h2>
+          <p>Simply Delightful Icon System</p>
+        </div>
+        <a class="resource-button" href="https://remixicon.com/" target="_blank">Veja</a>        
+        <div id="hospedagem"></div>
       </li>  
 
       <div class="linha"></div>
