React Router - React Training

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1530,6 +1530,21 @@
         </div>
         <a class="resource-button" href="https://pt-br.reactjs.org/?fbclid=IwAR0qox-iLijSa20vGDex2DoJ9IgwyE4YG7BzA8L3s7grsqSXyXGmyNVnJ2I" target="_blank">Veja</a>
       </li>
+      
+      <li>
+        <a href="https://reacttraining.com/react-router/web/guides/quick-start" target="_blank">
+          <div class="resource-icon">
+            <img src="https://pbs.twimg.com/profile_images/446356636710363136/OYIaJ1KK_400x400.png" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://reacttraining.com/react-router/web/guides/quick-start" target="_blank">React Router: Declarative Router</a>
+          </h2>
+          <p>React Training / React Router</p>
+        </div>
+        <a class="resource-button" href="https://reacttraining.com/react-router/web/guides/quick-start" target="_blank">Veja</a>
+      </li>
 
 
       <!-- <li>
