React Router: Docs

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1545,6 +1545,21 @@
         </div>
         <a class="resource-button" href="https://reacttraining.com/react-router/web/guides/quick-start" target="_blank">Veja</a>
       </li>
+      
+      <li>
+        <a href="https://github.com/ReactTraining/react-router/blob/master/packages/react-router-dom/docs/api/NavLink.md" target="_blank">
+          <div class="resource-icon">
+            <img src="https://pbs.twimg.com/profile_images/446356636710363136/OYIaJ1KK_400x400.png" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/ReactTraining/react-router/blob/master/packages/react-router-dom/docs/api/NavLink.md" target="_blank">React Router: Docs</a>
+          </h2>
+          <p>React Router</p>
+        </div>
+        <a class="resource-button" href="https://github.com/ReactTraining/react-router/blob/master/packages/react-router-dom/docs/api/NavLink.md" target="_blank">Veja</a>
+      </li>
 
 
       <!-- <li>
