atualição do meta description

--- a/cv/index.html
+++ b/cv/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1,requiresActiveX=true">
   <link href="img/favicon.ico" rel="shortcut icon" />
   <title> Robson Vinicius | Designer </title>
-  <meta name="description" content="Robson Vinicius Designer formado em Design - Bacharelado, pós-graduado em Aplicativos de Jogos Digitais, cursando Pós-graduação em Administração e Marketing pela Uninter.">
+  <meta name="description" content="Robson Vinicius formado em Design - Bacharelado, pós-graduado em Aplicativos de Jogos Digitais e MBA em Administração e Marketing">
         
   <script> // Google analitycs
     
