atualizacao thumbnail codeacademy

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2571,7 +2571,7 @@
       <li>
         <a href="https://www.codecademy.com" target="_blank">
           <div class="resource-icon">
-            <img src="https://production.cdmycdn.com/webpack/44e01805165bfde4e6e4322c540abf81.svg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/10540415_905110306169009_6386804842604452646_n.png?_nc_cat=105&_nc_oc=AQmvU4EGDmoz-yB3w-YI6aObtTNWwZVjn9Xucjl751FTUQhM0hZgEU0BKxgcy8s3NAs&_nc_ht=scontent.fcwb1-1.fna&oh=a737bc69bbf9f2aef6437bc66ccfe159&oe=5E087230" alt="#" />
           </div>
         </a>
         <div class="resource-details">
