Scrum Case Studies

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -524,6 +524,25 @@
         <a class="resource-button" href="https://tradersclub.com.br/?gclid=EAIaIQobChMIh8PaloLx4wIVCYGRCh1c7AuZEAAYASAAEgIJ3_D_BwE" target="_blank">Veja</a>
       </li>
 
+      <div class="linha"></div>
+        <h2 class="margen-titulo color-frontend">Agile</h2>        
+      <div class="linha"></div>
+            
+      <li>
+        <a href="http://www.scrumcasestudies.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.scrumcasestudies.com/" target="_blank">Scrum Case Studies</a>
+          </h2>
+          <p>Estudos de caso em Scrum</p>
+        </div>
+        <a class="resource-button" href="http://www.scrumcasestudies.com/" target="_blank">Veja</a>
+      </li>
+
     </ul>
       <ul class="sidebar-navigation">
              <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
