Visualizing Git - Ferramenta para visualização do comportamento do Git

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1502,6 +1502,21 @@
       </li>
       
       <li>
+        <a href="https://git-scm.com/docs" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://git-scm.com/docs" target="_blank">Visualizing Git</a>
+          </h2>
+          <p>Ferramenta para visualização do comportamento do Git</p>
+        </div>
+        <a class="resource-button" href="https://git-scm.com/docs" target="_blank">Veja</a>
+      </li>
+      
+      <li>
         <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank">
           <div class="resource-icon">
             <img src="https://pbs.twimg.com/profile_images/446356636710363136/OYIaJ1KK_400x400.png" alt="#" />
