--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1502,18 +1502,18 @@
       </li>
       
       <li>
-        <a href="https://git-scm.com/docs" target="_blank">
+        <a href="https://git-school.github.io/visualizing-git/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://git-scm.com/docs" target="_blank">Visualizing Git</a>
+            <a href="https://git-school.github.io/visualizing-git/" target="_blank">Visualizing Git</a>
           </h2>
           <p>Ferramenta para visualização do comportamento do Git</p>
         </div>
-        <a class="resource-button" href="https://git-scm.com/docs" target="_blank">Veja</a>
+        <a class="resource-button" href="https://git-school.github.io/visualizing-git/" target="_blank">Veja</a>
       </li>
       
       <li>
