Manifesto para desenvolvimento Ágil de Software

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -542,6 +542,21 @@
         </div>
         <a class="resource-button" href="http://www.scrumcasestudies.com/" target="_blank">Veja</a>
       </li>
+            
+      <li>
+        <a href="http://agilemanifesto.org/iso/ptbr/manifesto.html" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://agilemanifesto.org/iso/ptbr/manifesto.html" target="_blank">O Manifesto Ágil</a>
+          </h2>
+          <p>Manifesto para desenvolvimento Ágil de Software</p>
+        </div>
+        <a class="resource-button" href="http://agilemanifesto.org/iso/ptbr/manifesto.html" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
