--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -200,7 +200,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.designimador.com.br/" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/13501628_1321000701246950_6488672590597745421_n.png?_nc_cat=111&_nc_ht=scontent.fcwb1-1.fna&oh=50018dcd4d15aa5670f174b1e35651bd&oe=5D72075C" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/13501628_1321000701246950_6488672590597745421_n.png?_nc_cat=111&_nc_oc=AQml4cblLvQr0inijZJZm3hzxT-g5c6RbDeULaY3VRKabgSvOpg9iIN89c2DGEZ2mVU&_nc_ht=scontent.fcwb2-2.fna&oh=54f329f9da7905c50544c1e4655c5e08&oe=5E37C85C" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -216,7 +216,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://designermaodevaca.com/categoria/post" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/34637619_2177931402223176_3927455611725283328_n.png?_nc_cat=100&_nc_ht=scontent.fcwb1-1.fna&oh=825563989b09e6428accd15f83b75c79&oe=5D2D6203" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/34637619_2177931402223176_3927455611725283328_n.png?_nc_cat=100&_nc_oc=AQncsh384cVMa1evGWrg6lc0XMEaY_JylezEYMW4p5McZMwUuSkqU74ebBndN28n6iw&_nc_ht=scontent.fcwb2-2.fna&oh=9805a8dfc4e297631dd95b02246c033f&oe=5DF32303" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -253,7 +253,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://theblog.adobe.com/" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/26814452_1588906554497375_5273049988508376744_n.png?_nc_cat=105&_nc_ht=scontent.fcwb1-1.fna&oh=44b2c0725d67288b29d73ba1e061b9ee&oe=5D31F104" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/26814452_1588906554497375_5273049988508376744_n.png?_nc_cat=105&_nc_oc=AQljCIKDscZDSqs_pAWpXy5en8VjM0mq74Wct0dEYfJKZEpsspMbt3O65zkv-fRUVP8&_nc_ht=scontent.fcwb2-1.fna&oh=9246fbd1514d467a354e873ffdafb1dc&oe=5DF7B204" alt="#" />
           </a>
         </div>
         <div class="resource-details">
