--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -907,6 +907,22 @@
         <div id="zoom"></div>
       </li>  
 
+      <li>
+        <a href="https://dixonandmoe.com/rellax/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://dixonandmoe.com/rellax/" target="_blank">Relax JS</a>
+          </h2>
+          <p>Free Paralax Features Using Vanilla JavaScript</p>
+        </div>
+        <a class="resource-button" href="https://dixonandmoe.com/rellax/" target="_blank">Veja</a>
+        <div id="zoom"></div>
+      </li>  
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Zoom | Modal | Popup</h2>
       <div class="linha"></div>
