Mobile input types

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2045,6 +2045,26 @@
           <p>Dados sobre o Javascript</p>
         </div>
         <a class="resource-button" href="https://stateofjs.com/" target="_blank">Veja</a>
+        <div id="accessibilidade"></div>
+      </li>
+
+      <div class="linha"></div>
+      <h2 class="margen-titulo color-frontend">Acessibilidade</h2>
+      <div class="linha"></div>
+        
+      <li>
+        <a href="http://mobileinputtypes.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://mobileinputtypes.com/" target="_blank">Mobile input types</a>
+          </h2>
+          <p>Input para celulares</p>
+        </div>
+        <a class="resource-button" href="http://mobileinputtypes.com/" target="_blank">Veja</a>
         <div id="blogs"></div>
       </li>
 
@@ -3217,6 +3237,7 @@
       <li><a class="scroll" href="#bancos">Banco de Dados</a></li>      
       <li><a class="scroll" href="#documentacao">Documentações</a></li>
       <li><a class="scroll" href="#utilitarios">Utilitários</a></li>
+      <li><a class="scroll" href="#acessibilidade">Acessibilidade</a></li>
       <li><a class="scroll" href="#blogs">Blogs</a></li>
       <li><a class="scroll" href="#cursos">Cursos</a></li>
       <li><a class="scroll" href="#tutoriais">Tutoriais</a></li>
